<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.owoSuperAdmin.categoryManagement.subCategory.addSubCategory.AddASubCategory">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24_white"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_sub_category"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/subCategoryImage"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:src="@drawable/category_management"
        android:layout_below="@id/categorySpinner"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sub_category_image" />


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_add_sub_category_image"
        android:layout_below="@id/subCategoryImage"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/subCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:background="@drawable/edit_text_black"
        android:hint="@string/enter_subcategory_name"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Sub Category Name"
        android:inputType="text"
        />


    <Button
        android:id="@+id/addNewSubCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sub_category"
        android:layout_below="@id/subCategoryName"
        android:background="@drawable/buttons_blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addNewSubCategory"
        android:layout_marginTop="8dp"
        android:indeterminateTint="@color/blue"/>

</RelativeLayout>