<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/shopkpr_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopkpr"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#FFBF00"
        android:layout_marginTop="30dp"
        android:gravity="center"/>


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/formHolder"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:textSize="20sp"
            android:textColorHint="#666"
            android:id="@+id/admin_email_address"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/email_address"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:autofillHints="email" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:textSize="20sp"
                android:textColorHint="#666"
                android:id="@+id/admin_password"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_input_lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:autofillHints="password"/>

            <ImageView
                android:id="@+id/show_password"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_off"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/see_password" />

        </RelativeLayout>

        <Button
            android:textSize="22sp"
            android:textColor="#fff"
            android:id="@+id/login_btn"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/buttons_blue"
            android:layout_marginTop="22dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:elevation="0dp" />
    </LinearLayout>

</LinearLayout>
