<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/shopKeeperImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/person"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            android:contentDescription="@string/dummy_image" />

        <TextView
            android:id="@+id/shopKeeperName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/shop_keeper_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/shopKeeperMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/shop_keeper_mobile_number"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/quantum_grey"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>




